	* Added a 'Spread::fileExtension()' method in 'lib/spread.cpp'
	and 'lib/spread.h'.
2015-01-05 Fred Gleason <fredg@paravelsystems.com>
	* Removed dead methods from 'davit/list_reports.cpp' and
	'davit/list_reports.h'.
2015-01-05 Fred Gleason <fredg@paravelsystems.com>
	* Refactored temporary file generation routines.
2015-01-05 Fred Gleason <fredg@paravelsystems.com>
	* Fixed a bug in 'lib/dvtmail-win32.cpp' that broke the build
	under Windows.
2015-01-12 Fred Gleason <fredg@paravelsystems.com>
	* Incremented the package version to 2.2.0.
2015-01-12 Fred Gleason <fredg@paravelsystems.com>
	* Fixed a bug in 'davit/Makefile.am' that broke the 'make rpm'
	target.
	* Fixed a bug in 'davit/davit.spec.in' that broke the 'make rpm'
	target.
2015-01-12 Fred Gleason <fredg@paravelsystems.com>
	* Incremented the package version to 2.2.2.
2015-01-12 Fred Gleason <fredg@paravelsystems.com>
	* Removed the 'City' and 'State' fields from the Pick Fields
	dialog for the 'Affiliate by Program' report.
2015-01-13 Fred Gleason <fredg@paravelsystems.com>
	* Incremented the package version to 2.2.3.
2015-01-23 Fred Gleason <fredg@paravelsystems.com>
	* Fixed a bug in 'davit/affiliatesbyprogram_report.cpp' that
	caused contact information to be incorrect in the
	'Affiliates/Admin Contacts by Program' report.
2015-01-23 Fred Gleason <fredg@paravelsystems.com>
	* Incremented the package version to 2.2.4.
2015-01-30 Fred Gleason <fredg@paravelsystems.com>
	* Fixed a bug in 'davit/affiliatesbyprogram_report.cpp' that caused
	programs with an ending time of midnight to be reported as ending
	at 11 PM.
2015-11-02 Fred Gleason <fredg@paravelsystems.com>
	* Cleaned up warnings in 'configure.ac' and 'Makefile.am'.
	* Added a 'qt3-MySQL' dependency in 'davit.spec.in'.
2016-07-28 Fred Gleason <fredg@paravelsystems.com>
	* Updated 'acinclude.m4'.
2016-07-28 Fred Gleason <fredg@paravelsystems.com>
	* Added an 'OpenofficePath=" parameter to the Config file.